<resources>
    <string name="app_name">AndroidToolBox</string>
    <string name="connexion">Connexion</string>
    <string name="deconnexionButton">Deconnexion</string>
    <string name="validate">Valider</string>
    <string name="loginInputLayout">Identifiant</string>
    <string name="passwordInputLayout">Mot de passe</string>
    <string name="saveText">Sauvegarde</string>
    <string name="lifeText">Cycle de vie</string>
    <string name="permissionText">Permissions</string>
    <string name="webservicesText">Web services</string>
    <string name="helloText">Bonjour</string>
    <string name="dataText">Acces aux informations Android</string>
    <string name="contentText"></string>
    <string name="pictureButton"></string>
    <string name="saveButton">Sauvegarder</string>
    <string name="nameInputText">Nom</string>
    <string name="datePickerDialog">Date de naissance</string>
    <string name="surnameInputText">Prenom</string>
    <string name="changeFragment">Changer de fragment</string>
    <string name="longitudeTextView">Longitude</string>
    <string name="latitudeTextView">Latitude</string>

    <string name="lifeCycleFragmentContent">Test Fragment 1</string>
    <string name="lifeCycleSecondFragmentContent">Test Fragment 2</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
