<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/telechargement" />

    <TextView
        android:id="@string/helloText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="32dp"
        android:text="Bonjour"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveText"
        app:layout_constraintEnd_toEndOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="@+id/saveButton"
        app:layout_constraintTop_toBottomOf="@+id/saveButton"
        tools:text="Sauvegarde" />

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="100dp"
        android:background="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/stat_notify_sdcard"
        tools:srcCompat="@android:drawable/stat_notify_sdcard" />

    <ImageButton
        android:id="@+id/lifeButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="300dp"
        android:background="#FF0000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/stat_notify_chat" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lifeText"
        app:layout_constraintEnd_toEndOf="@+id/lifeButton"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toStartOf="@+id/lifeButton"
        app:layout_constraintTop_toBottomOf="@+id/lifeButton" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permissionText"
        app:layout_constraintEnd_toEndOf="@+id/permissionButton"
        app:layout_constraintStart_toStartOf="@+id/permissionButton"
        app:layout_constraintTop_toBottomOf="@+id/permissionButton" />

    <ImageButton
        android:id="@+id/permissionButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:background="#FF0000"
        android:tint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@android:drawable/stat_sys_speakerphone"
        tools:srcCompat="@android:drawable/stat_sys_speakerphone" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/webservicesText"
        app:layout_constraintEnd_toEndOf="@+id/webservicesButton"
        app:layout_constraintStart_toStartOf="@+id/webservicesButton"
        app:layout_constraintTop_toBottomOf="@+id/webservicesButton" />

    <ImageButton
        android:id="@+id/webservicesButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:background="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@android:drawable/stat_sys_download" />

    <Button
        android:id="@+id/deconnexionButton"
        android:layout_width="134dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="64dp"
        android:background="#FF0000"
        android:text="@string/deconnexionButton"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:text="@string/deconnexionButton"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>